@@ -504,3 +504,6 @@ leader_aliases_by_era = []
 ; auto-production from wonders. They do not apply to all other ways units may be created including by being captured, enslaved, spawned from a razed
 ; city, spawned for barbarians, pre-placed in a scenario, spawned for the AI based on difficulty level, etc.
 unit_limits = []
+
+; Removes barracks/harbor/airport requirement from upgrades
+allow_upgrades_in_any_city = false
