@@ -2,6 +2,7 @@
   - Config option has been renamed to ai_multi_city_start
 - Option to add improvements to AI's starter cities in multi-city start
 - Can set multiplier on AI research rate (replaces halve_ai_research_rate)
+- Option to allow upgrades in any city
 
 * RELEASE 18 PREVIEW 1
 - Unit limits
